--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "will-you-be-my-valentine",
-  "homepage": "https://ssad.github.io/v",
+  "homepage": "https://sibsad.github.io/v",
   "private": false,
   "version": "0.0.1",
   "type": "module",
