--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "will-you-be-my-valentine",
-  "homepage": "https://sibsad.github.io/v",
-  "private": false,
+  "homepage": "https://saurabhnemade.github.io/will-you-be-my-valentine",
+  "private": true,
   "version": "0.0.1",
   "type": "module",
   "scripts": {
